sample/msvc/error/c2019.cpp
// C2019.cpp
#!define TRUE 1   // C2019
